video overflow fix

--- a/sass/pages/_portfolio.sass
+++ b/sass/pages/_portfolio.sass
@@ -30,7 +30,8 @@ section .port_inner
     justify-content: center
     align-items: center
 
-#lightbox img
+#lightbox img,
+#lightbox video
     max-width: 1000px
     width: 90%
     max-height: 80%
